zeit.content.cp changes
=======================

0.12 (unreleased)
-----------------

- JSON-Post statt GET mit langer URL (#5868).

- Layout für Printarchivseiten hinzugefügt.

- ``cp_extra`` Blöcke: Neu im Ressort, Live-Search, Print Archiv, Relateds,
  Blindblock, Debug

0.11 (2009-08-03)
-----------------

- Weitere Layouts für den Teaserblock: Doppelspalter, Datumsteaser, Kleine
  Teaser (#5829).

0.10.1 (2009-07-28)
-------------------

- CP-Source zum Filtern per Suche angepasst (#4499).

0.10 (2009-07-20)
-----------------

- RSS-Block zeigt Fehler sinnvoller an (#5678).

- Speichern funktioniert zuverlässiger (#5707, #5669).

- Bessere Anzeige von Fehlern im RSS-Block (#5678).

- Modulnamen in der Modulbibliothek werden jetzt übersetzt (u.A. #5677).

- Vollgraphischer Block ist direkt nach dem Anlegen nicht mehr leer.

- LightboxForms aktivieren jetzt den Lightbox-Context.

0.9.1 (2009-06-24)
------------------

- »leader-upright«-Layout repariert (#5570).

- Die CenterPage enthält einen neuen Abschnitt ``<feed>``, in dem
  ``<reference>``s zu den n letzten Teasern aus dem Aufmacherbereich stehen;
  jeweils der erste Teaser eines Teaserblocks wird dort eingefügt (#4884).

  Die Einträge sind umgekehrt chronologisch geordnet, d. h. um den eigentlichen
  RSS-Feed zu erzeugen, kann das XSLT die ersten x Einträge nehmen.
  n ist konfigurierbar über product config ``cp-feed-max-items``
  (im Moment n=200).


0.9 (2009-06-18)
----------------

Neue Funktionen
~~~~~~~~~~~~~~~

- Modul-Bibliothek: Tab für »alle«.

- Die Sidebar wird beim Öffnen des Editors automatisch ausgeblendet (#5038).

Technische Änderungen
~~~~~~~~~~~~~~~~~~~~~

- Content-Source für CenterPages hinzugefügt.

0.8 (2009-06-09)
----------------

- ``type``-Attribut auf ``<centerpage>`` (#5030, #5480).

- Contextabhängige Layouts (#5034).

- Registrierung via Martian.

- Bessere Texte

0.7 (2009-05-26)
----------------

Neue Funktionen
~~~~~~~~~~~~~~~
